parser.output
   0  $accept : %entry% $end

   1  graph : EOF
   2        | STRICT GRAPH ID LCB stmt_list RCB EOF
   3        | STRICT GRAPH LCB stmt_list RCB EOF
   4        | GRAPH ID LCB stmt_list RCB EOF
   5        | GRAPH LCB stmt_list RCB EOF

   6  stmt_list :
   7            | stmt
   8            | stmt SEMICOLON stmt_list
   9            | stmt stmt_list

  10  node_id : ID
  11          | ID COLON ID

  12  subgraph : SUBGRAPH ID LCB stmt_list RCB
  13           | SUBGRAPH LCB stmt_list RCB
  14           | LCB stmt_list RCB

  15  edgeRHS : EDGEOP subgraph edgeRHS
  16          | EDGEOP subgraph
  17          | EDGEOP node_id edgeRHS
  18          | EDGEOP node_id

  19  attr_stmt : GRAPH attr_list
  20            | NODE attr_list
  21            | EDGE attr_list

  22  attr_list :
  23            | LB a_list RB
  24            | LB a_list RB attr_list

  25  a_list :
  26         | ID EQUAL ID a_list
  27         | ID EQUAL ID SEMICOLON a_list
  28         | ID EQUAL ID COMMA a_list

  29  node_stmt : node_id attr_list

  30  edge_stmt : subgraph edgeRHS attr_list
  31            | node_id edgeRHS attr_list

  32  stmt : node_stmt
  33       | edge_stmt
  34       | ID EQUAL ID
  35       | attr_stmt
  36       | subgraph

  37  %entry% : '\001' graph

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . graph  (37)

	STRICT  shift 3
	GRAPH  shift 4
	EOF  shift 5
	.  error

	graph  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	graph : STRICT . GRAPH ID LCB stmt_list RCB EOF  (2)
	graph : STRICT . GRAPH LCB stmt_list RCB EOF  (3)

	GRAPH  shift 7
	.  error


state 4
	graph : GRAPH . ID LCB stmt_list RCB EOF  (4)
	graph : GRAPH . LCB stmt_list RCB EOF  (5)

	ID  shift 8
	LCB  shift 9
	.  error


state 5
	graph : EOF .  (1)

	.  reduce 1


state 6
	%entry% : '\001' graph .  (37)

	.  reduce 37


state 7
	graph : STRICT GRAPH . ID LCB stmt_list RCB EOF  (2)
	graph : STRICT GRAPH . LCB stmt_list RCB EOF  (3)

	ID  shift 10
	LCB  shift 11
	.  error


state 8
	graph : GRAPH ID . LCB stmt_list RCB EOF  (4)

	LCB  shift 12
	.  error


state 9
	graph : GRAPH LCB . stmt_list RCB EOF  (5)
	stmt_list : .  (6)

	ID  shift 13
	GRAPH  shift 14
	LCB  shift 15
	SUBGRAPH  shift 16
	EDGE  shift 17
	NODE  shift 18
	RCB  reduce 6

	stmt_list  goto 19
	stmt  goto 20
	node_id  goto 21
	subgraph  goto 22
	attr_stmt  goto 23
	node_stmt  goto 24
	edge_stmt  goto 25


state 10
	graph : STRICT GRAPH ID . LCB stmt_list RCB EOF  (2)

	LCB  shift 26
	.  error


state 11
	graph : STRICT GRAPH LCB . stmt_list RCB EOF  (3)
	stmt_list : .  (6)

	ID  shift 13
	GRAPH  shift 14
	LCB  shift 15
	SUBGRAPH  shift 16
	EDGE  shift 17
	NODE  shift 18
	RCB  reduce 6

	stmt_list  goto 27
	stmt  goto 20
	node_id  goto 21
	subgraph  goto 22
	attr_stmt  goto 23
	node_stmt  goto 24
	edge_stmt  goto 25


state 12
	graph : GRAPH ID LCB . stmt_list RCB EOF  (4)
	stmt_list : .  (6)

	ID  shift 13
	GRAPH  shift 14
	LCB  shift 15
	SUBGRAPH  shift 16
	EDGE  shift 17
	NODE  shift 18
	RCB  reduce 6

	stmt_list  goto 28
	stmt  goto 20
	node_id  goto 21
	subgraph  goto 22
	attr_stmt  goto 23
	node_stmt  goto 24
	edge_stmt  goto 25


state 13
	node_id : ID .  (10)
	node_id : ID . COLON ID  (11)
	stmt : ID . EQUAL ID  (34)

	COLON  shift 29
	EQUAL  shift 30
	ID  reduce 10
	GRAPH  reduce 10
	SEMICOLON  reduce 10
	LB  reduce 10
	LCB  reduce 10
	RCB  reduce 10
	SUBGRAPH  reduce 10
	EDGEOP  reduce 10
	EDGE  reduce 10
	NODE  reduce 10


state 14
	attr_stmt : GRAPH . attr_list  (19)
	attr_list : .  (22)

	LB  shift 31
	ID  reduce 22
	GRAPH  reduce 22
	SEMICOLON  reduce 22
	LCB  reduce 22
	RCB  reduce 22
	SUBGRAPH  reduce 22
	EDGE  reduce 22
	NODE  reduce 22

	attr_list  goto 32


state 15
	subgraph : LCB . stmt_list RCB  (14)
	stmt_list : .  (6)

	ID  shift 13
	GRAPH  shift 14
	LCB  shift 15
	SUBGRAPH  shift 16
	EDGE  shift 17
	NODE  shift 18
	RCB  reduce 6

	stmt_list  goto 33
	stmt  goto 20
	node_id  goto 21
	subgraph  goto 22
	attr_stmt  goto 23
	node_stmt  goto 24
	edge_stmt  goto 25


state 16
	subgraph : SUBGRAPH . ID LCB stmt_list RCB  (12)
	subgraph : SUBGRAPH . LCB stmt_list RCB  (13)

	ID  shift 34
	LCB  shift 35
	.  error


state 17
	attr_stmt : EDGE . attr_list  (21)
	attr_list : .  (22)

	LB  shift 31
	ID  reduce 22
	GRAPH  reduce 22
	SEMICOLON  reduce 22
	LCB  reduce 22
	RCB  reduce 22
	SUBGRAPH  reduce 22
	EDGE  reduce 22
	NODE  reduce 22

	attr_list  goto 36


state 18
	attr_stmt : NODE . attr_list  (20)
	attr_list : .  (22)

	LB  shift 31
	ID  reduce 22
	GRAPH  reduce 22
	SEMICOLON  reduce 22
	LCB  reduce 22
	RCB  reduce 22
	SUBGRAPH  reduce 22
	EDGE  reduce 22
	NODE  reduce 22

	attr_list  goto 37


state 19
	graph : GRAPH LCB stmt_list . RCB EOF  (5)

	RCB  shift 38
	.  error


20: reduce/reduce conflict (reduce 6, reduce 7) on RCB
state 20
	stmt_list : stmt .  (7)
	stmt_list : stmt . SEMICOLON stmt_list  (8)
	stmt_list : stmt . stmt_list  (9)
	stmt_list : .  (6)

	ID  shift 13
	GRAPH  shift 14
	SEMICOLON  shift 39
	LCB  shift 15
	SUBGRAPH  shift 16
	EDGE  shift 17
	NODE  shift 18
	RCB  reduce 6

	stmt_list  goto 40
	stmt  goto 20
	node_id  goto 21
	subgraph  goto 22
	attr_stmt  goto 23
	node_stmt  goto 24
	edge_stmt  goto 25


state 21
	node_stmt : node_id . attr_list  (29)
	edge_stmt : node_id . edgeRHS attr_list  (31)
	attr_list : .  (22)

	LB  shift 31
	EDGEOP  shift 41
	ID  reduce 22
	GRAPH  reduce 22
	SEMICOLON  reduce 22
	LCB  reduce 22
	RCB  reduce 22
	SUBGRAPH  reduce 22
	EDGE  reduce 22
	NODE  reduce 22

	edgeRHS  goto 42
	attr_list  goto 43


state 22
	edge_stmt : subgraph . edgeRHS attr_list  (30)
	stmt : subgraph .  (36)

	EDGEOP  shift 41
	ID  reduce 36
	GRAPH  reduce 36
	SEMICOLON  reduce 36
	LCB  reduce 36
	RCB  reduce 36
	SUBGRAPH  reduce 36
	EDGE  reduce 36
	NODE  reduce 36

	edgeRHS  goto 44


state 23
	stmt : attr_stmt .  (35)

	.  reduce 35


state 24
	stmt : node_stmt .  (32)

	.  reduce 32


state 25
	stmt : edge_stmt .  (33)

	.  reduce 33


state 26
	graph : STRICT GRAPH ID LCB . stmt_list RCB EOF  (2)
	stmt_list : .  (6)

	ID  shift 13
	GRAPH  shift 14
	LCB  shift 15
	SUBGRAPH  shift 16
	EDGE  shift 17
	NODE  shift 18
	RCB  reduce 6

	stmt_list  goto 45
	stmt  goto 20
	node_id  goto 21
	subgraph  goto 22
	attr_stmt  goto 23
	node_stmt  goto 24
	edge_stmt  goto 25


state 27
	graph : STRICT GRAPH LCB stmt_list . RCB EOF  (3)

	RCB  shift 46
	.  error


state 28
	graph : GRAPH ID LCB stmt_list . RCB EOF  (4)

	RCB  shift 47
	.  error


state 29
	node_id : ID COLON . ID  (11)

	ID  shift 48
	.  error


state 30
	stmt : ID EQUAL . ID  (34)

	ID  shift 49
	.  error


state 31
	attr_list : LB . a_list RB  (23)
	attr_list : LB . a_list RB attr_list  (24)
	a_list : .  (25)

	ID  shift 50
	RB  reduce 25

	a_list  goto 51


state 32
	attr_stmt : GRAPH attr_list .  (19)

	.  reduce 19


state 33
	subgraph : LCB stmt_list . RCB  (14)

	RCB  shift 52
	.  error


state 34
	subgraph : SUBGRAPH ID . LCB stmt_list RCB  (12)

	LCB  shift 53
	.  error


state 35
	subgraph : SUBGRAPH LCB . stmt_list RCB  (13)
	stmt_list : .  (6)

	ID  shift 13
	GRAPH  shift 14
	LCB  shift 15
	SUBGRAPH  shift 16
	EDGE  shift 17
	NODE  shift 18
	RCB  reduce 6

	stmt_list  goto 54
	stmt  goto 20
	node_id  goto 21
	subgraph  goto 22
	attr_stmt  goto 23
	node_stmt  goto 24
	edge_stmt  goto 25


state 36
	attr_stmt : EDGE attr_list .  (21)

	.  reduce 21


state 37
	attr_stmt : NODE attr_list .  (20)

	.  reduce 20


state 38
	graph : GRAPH LCB stmt_list RCB . EOF  (5)

	EOF  shift 55
	.  error


state 39
	stmt_list : stmt SEMICOLON . stmt_list  (8)
	stmt_list : .  (6)

	ID  shift 13
	GRAPH  shift 14
	LCB  shift 15
	SUBGRAPH  shift 16
	EDGE  shift 17
	NODE  shift 18
	RCB  reduce 6

	stmt_list  goto 56
	stmt  goto 20
	node_id  goto 21
	subgraph  goto 22
	attr_stmt  goto 23
	node_stmt  goto 24
	edge_stmt  goto 25


state 40
	stmt_list : stmt stmt_list .  (9)

	.  reduce 9


state 41
	edgeRHS : EDGEOP . subgraph edgeRHS  (15)
	edgeRHS : EDGEOP . subgraph  (16)
	edgeRHS : EDGEOP . node_id edgeRHS  (17)
	edgeRHS : EDGEOP . node_id  (18)

	ID  shift 57
	LCB  shift 15
	SUBGRAPH  shift 16
	.  error

	node_id  goto 58
	subgraph  goto 59


state 42
	edge_stmt : node_id edgeRHS . attr_list  (31)
	attr_list : .  (22)

	LB  shift 31
	ID  reduce 22
	GRAPH  reduce 22
	SEMICOLON  reduce 22
	LCB  reduce 22
	RCB  reduce 22
	SUBGRAPH  reduce 22
	EDGE  reduce 22
	NODE  reduce 22

	attr_list  goto 60


state 43
	node_stmt : node_id attr_list .  (29)

	.  reduce 29


state 44
	edge_stmt : subgraph edgeRHS . attr_list  (30)
	attr_list : .  (22)

	LB  shift 31
	ID  reduce 22
	GRAPH  reduce 22
	SEMICOLON  reduce 22
	LCB  reduce 22
	RCB  reduce 22
	SUBGRAPH  reduce 22
	EDGE  reduce 22
	NODE  reduce 22

	attr_list  goto 61


state 45
	graph : STRICT GRAPH ID LCB stmt_list . RCB EOF  (2)

	RCB  shift 62
	.  error


state 46
	graph : STRICT GRAPH LCB stmt_list RCB . EOF  (3)

	EOF  shift 63
	.  error


state 47
	graph : GRAPH ID LCB stmt_list RCB . EOF  (4)

	EOF  shift 64
	.  error


state 48
	node_id : ID COLON ID .  (11)

	.  reduce 11


state 49
	stmt : ID EQUAL ID .  (34)

	.  reduce 34


state 50
	a_list : ID . EQUAL ID a_list  (26)
	a_list : ID . EQUAL ID SEMICOLON a_list  (27)
	a_list : ID . EQUAL ID COMMA a_list  (28)

	EQUAL  shift 65
	.  error


state 51
	attr_list : LB a_list . RB  (23)
	attr_list : LB a_list . RB attr_list  (24)

	RB  shift 66
	.  error


state 52
	subgraph : LCB stmt_list RCB .  (14)

	.  reduce 14


state 53
	subgraph : SUBGRAPH ID LCB . stmt_list RCB  (12)
	stmt_list : .  (6)

	ID  shift 13
	GRAPH  shift 14
	LCB  shift 15
	SUBGRAPH  shift 16
	EDGE  shift 17
	NODE  shift 18
	RCB  reduce 6

	stmt_list  goto 67
	stmt  goto 20
	node_id  goto 21
	subgraph  goto 22
	attr_stmt  goto 23
	node_stmt  goto 24
	edge_stmt  goto 25


state 54
	subgraph : SUBGRAPH LCB stmt_list . RCB  (13)

	RCB  shift 68
	.  error


state 55
	graph : GRAPH LCB stmt_list RCB EOF .  (5)

	.  reduce 5


state 56
	stmt_list : stmt SEMICOLON stmt_list .  (8)

	.  reduce 8


state 57
	node_id : ID .  (10)
	node_id : ID . COLON ID  (11)

	COLON  shift 29
	ID  reduce 10
	GRAPH  reduce 10
	SEMICOLON  reduce 10
	LB  reduce 10
	LCB  reduce 10
	RCB  reduce 10
	SUBGRAPH  reduce 10
	EDGEOP  reduce 10
	EDGE  reduce 10
	NODE  reduce 10


state 58
	edgeRHS : EDGEOP node_id . edgeRHS  (17)
	edgeRHS : EDGEOP node_id .  (18)

	EDGEOP  shift 41
	ID  reduce 18
	GRAPH  reduce 18
	SEMICOLON  reduce 18
	LB  reduce 18
	LCB  reduce 18
	RCB  reduce 18
	SUBGRAPH  reduce 18
	EDGE  reduce 18
	NODE  reduce 18

	edgeRHS  goto 69


state 59
	edgeRHS : EDGEOP subgraph . edgeRHS  (15)
	edgeRHS : EDGEOP subgraph .  (16)

	EDGEOP  shift 41
	ID  reduce 16
	GRAPH  reduce 16
	SEMICOLON  reduce 16
	LB  reduce 16
	LCB  reduce 16
	RCB  reduce 16
	SUBGRAPH  reduce 16
	EDGE  reduce 16
	NODE  reduce 16

	edgeRHS  goto 70


state 60
	edge_stmt : node_id edgeRHS attr_list .  (31)

	.  reduce 31


state 61
	edge_stmt : subgraph edgeRHS attr_list .  (30)

	.  reduce 30


state 62
	graph : STRICT GRAPH ID LCB stmt_list RCB . EOF  (2)

	EOF  shift 71
	.  error


state 63
	graph : STRICT GRAPH LCB stmt_list RCB EOF .  (3)

	.  reduce 3


state 64
	graph : GRAPH ID LCB stmt_list RCB EOF .  (4)

	.  reduce 4


state 65
	a_list : ID EQUAL . ID a_list  (26)
	a_list : ID EQUAL . ID SEMICOLON a_list  (27)
	a_list : ID EQUAL . ID COMMA a_list  (28)

	ID  shift 72
	.  error


66: reduce/reduce conflict (reduce 22, reduce 23) on ID
66: reduce/reduce conflict (reduce 22, reduce 23) on GRAPH
66: reduce/reduce conflict (reduce 22, reduce 23) on SEMICOLON
66: reduce/reduce conflict (reduce 22, reduce 23) on LCB
66: reduce/reduce conflict (reduce 22, reduce 23) on RCB
66: reduce/reduce conflict (reduce 22, reduce 23) on SUBGRAPH
66: reduce/reduce conflict (reduce 22, reduce 23) on EDGE
66: reduce/reduce conflict (reduce 22, reduce 23) on NODE
state 66
	attr_list : LB a_list RB .  (23)
	attr_list : LB a_list RB . attr_list  (24)
	attr_list : .  (22)

	LB  shift 31
	ID  reduce 22
	GRAPH  reduce 22
	SEMICOLON  reduce 22
	LCB  reduce 22
	RCB  reduce 22
	SUBGRAPH  reduce 22
	EDGE  reduce 22
	NODE  reduce 22

	attr_list  goto 73


state 67
	subgraph : SUBGRAPH ID LCB stmt_list . RCB  (12)

	RCB  shift 74
	.  error


state 68
	subgraph : SUBGRAPH LCB stmt_list RCB .  (13)

	.  reduce 13


state 69
	edgeRHS : EDGEOP node_id edgeRHS .  (17)

	.  reduce 17


state 70
	edgeRHS : EDGEOP subgraph edgeRHS .  (15)

	.  reduce 15


state 71
	graph : STRICT GRAPH ID LCB stmt_list RCB EOF .  (2)

	.  reduce 2


state 72
	a_list : ID EQUAL ID . a_list  (26)
	a_list : ID EQUAL ID . SEMICOLON a_list  (27)
	a_list : ID EQUAL ID . COMMA a_list  (28)
	a_list : .  (25)

	ID  shift 50
	SEMICOLON  shift 75
	COMMA  shift 76
	RB  reduce 25

	a_list  goto 77


state 73
	attr_list : LB a_list RB attr_list .  (24)

	.  reduce 24


state 74
	subgraph : SUBGRAPH ID LCB stmt_list RCB .  (12)

	.  reduce 12


state 75
	a_list : ID EQUAL ID SEMICOLON . a_list  (27)
	a_list : .  (25)

	ID  shift 50
	RB  reduce 25

	a_list  goto 78


state 76
	a_list : ID EQUAL ID COMMA . a_list  (28)
	a_list : .  (25)

	ID  shift 50
	RB  reduce 25

	a_list  goto 79


state 77
	a_list : ID EQUAL ID a_list .  (26)

	.  reduce 26


state 78
	a_list : ID EQUAL ID SEMICOLON a_list .  (27)

	.  reduce 27


state 79
	a_list : ID EQUAL ID COMMA a_list .  (28)

	.  reduce 28


Rules never reduced:
	stmt_list : stmt  (7)
	attr_list : LB a_list RB  (23)


State 20 contains 1 reduce/reduce conflict.
State 66 contains 8 reduce/reduce conflicts.


19 terminals, 13 nonterminals
38 grammar rules, 80 states
